# neetoree

./: .gitignore  CMakeLists.txt
assets/: peg.grammar  skype_dbus_interface.xml
cmake/: FindGLIB.cmake
src/: CMakeLists.txt  main.c
src-gen/: CMakeLists.txt  DBUSAPI.c  DBUSAPI.h
support/: CMakeLists.txt
support/parser/: CMakeLists.txt  neetoree_parser.h  neetoree_parser_actions.h  neetoree_parser_actions.inc  neetoree_parser_builder.c  neetoree_parser_builder.h  neetoree_parser_compile.c  neetoree_parser_compile.h  neetoree_parser_grammar.c  neetoree_parser_main.c  neetoree_parser_node_action.c  neetoree_parser_node_begin.c  neetoree_parser_node_dot.c  neetoree_parser_node_end.c  neetoree_parser_node_group.c  neetoree_parser_node_literal.c  neetoree_parser_node_none.c  neetoree_parser_node_pred.c  neetoree_parser_node_range.c  neetoree_parser_node_ref.c  neetoree_parser_peg.c  neetoree_parser_valuestack.c  neetoree_parser_valuestack.h
support/util/: CMakeLists.txt  neetoree_avltree.c  neetoree_avltree.h  neetoree_common.h  neetoree_ptrlist.c  neetoree_ptrlist.h  neetoree_ptrstack.c  neetoree_ptrstack.h  neetoree_ptrtree.c  neetoree_ptrtree.h  neetoree_stream.c  neetoree_stream.h  neetoree_string.c  neetoree_string.h
